# miniflux-client

./: .gitignore  .justfile  .vampus.yml  CHANGELOG.md  Cargo.toml  Dockerfile  GIT_FLOW.md  TESTING.md  docker-compose.yml
.github/workflows/: release.yml
src/: main.rs
src/models/: matrix.rs  miniflux.rs  mod.rs  model.rs  telegram.rs
