[package]
name = "miniflux-client"
version = "0.1.1"
edition = "2021"

[dependencies]
chrono = "0.4.41"
openssl = { version = "0.10.72", features = ["vendored"] }
reqwest = { version = "0.12.15", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
time = { version = "0.3.41", features = ["macros"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["tracing", "env-filter", "local-time", "fmt"] }
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15.0"
