[package]
name = "miniflux-client"
version = "0.1.8"
edition = "2021"

[dependencies]
chrono = "0.4.44"
openssl = { version = "0.10.76", features = ["vendored"] }
reqwest = { version = "0.13.2", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
time = { version = "0.3.47", features = ["macros"] }
tokio = { version = "1.51.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["tracing", "env-filter", "local-time", "fmt"] }
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15.0"
mockito = "1.7.2"
