[package]
name = "miniflux-client"
version = "0.1.8"
description = "A Rust client for the Miniflux RSS reader API"
license = "MIT"
edition = "2021"

[dependencies]
chrono = "0.4.45"
openssl = { version = "0.10.81", features = ["vendored"] }
reqwest = { version = "0.13.4", features = ["json", "query"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
time = { version = "0.3.49", features = ["macros"] }
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["tracing", "env-filter", "local-time", "fmt"] }
urlencoding = "2.1.3"

[dev-dependencies]
dotenv = "0.15.0"
mockito = "1.7.2"
